# prism-Bonsai-1bit

./: .gitignore  README.md  pyproject.toml
bonsai_bench/: __init__.py  cli.py  models.py  questions.py  runner.py
bonsai_bench/benchmarks/: memory.py  needle_haystack.py  turboquant_eval.py
bonsai_bench/reporting/: pdf.py
